- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
5/13/08 - make thermometer display "?" when advancing glacier overlaps a thermometer, or when in illegal drop location
5/13/07 - add PSwing bounds workaround to all tools that that display a JPanel of values
5/13/07 - bugfix: ice thickness tool's value display (JPanel wrapped in a PSwing) doesn't size itself reliably
5/13/07 - replace ice thickness tool image in toolbox, delete related image files
5/13/08 - bugfix: tools dropped in the trash incorrectly "snap" to their drop constraints before disappearing
5/13/08 - change ice thickness tool to "?" when drag starts, not during the drag
5/13/08 - do not call super.drag in drag handlers, it causes problems as noted in code comments
5/12/08 - first pass at resizable ice thickness tool, a little clunky looking
5/12/08 - delete unused images and assets
******* 0.00.20 (21338)
5/12/08 - move "max x" property out of glacier and into view; model has no such limit on x
5/12/08 - move headwall property to valley model
5/12/08 - change valley formula to better match the elevation left of the headwall in the image
5/9/08 - organize imports
5/9/08 - make ice thickness tool display "?" while it's being dragged
******* 0.00.19 (21308)
5/9/08 - add drop constraints for all other tools
******* 0.00.18 (21304)
5/9/08 - add drop constraints to tracer flag model, snap to legal position
5/8/08 - call cleanup on all tools and tool nodes when they are trashed
5/8/08 - reduce number of calls to Glacier.getSurfaceElevation in IceNode
5/8/08 - use same method of computation and precision for all geometry in IceNode
5/8/08 - remove ice thickness grid from public interface of Glacier model