@@ -4,7 +4,6 @@ package edu.colorado.phet.glaciers.view.tools;
 
 import java.awt.geom.Point2D;
 
-import edu.colorado.phet.glaciers.GlaciersImages;
 import edu.colorado.phet.glaciers.GlaciersStrings;
 import edu.colorado.phet.glaciers.model.AbstractTool;
 import edu.colorado.phet.glaciers.model.IToolProducer;
@@ -17,7 +16,7 @@ import edu.colorado.phet.glaciers.view.tools.AbstractToolIconNode.InteractiveToo
 public class BoreholeDrillIconNode extends InteractiveToolIconNode {
     
     public BoreholeDrillIconNode( IToolProducer toolProducer, ModelViewTransform mvt  ) {
-        super( GlaciersImages.BOREHOLE_DRILL, GlaciersStrings.TOOLBOX_BOREHOLD_DRILL, toolProducer, mvt );
+        super( BoreholeDrillNode.createImage(), GlaciersStrings.TOOLBOX_BOREHOLD_DRILL, toolProducer, mvt );
     }
     
     public AbstractTool createTool( Point2D position ) {
