@@ -4,7 +4,6 @@ package edu.colorado.phet.glaciers.view.tools;
 
 import java.awt.geom.Point2D;
 
-import edu.colorado.phet.glaciers.GlaciersImages;
 import edu.colorado.phet.glaciers.GlaciersStrings;
 import edu.colorado.phet.glaciers.model.AbstractTool;
 import edu.colorado.phet.glaciers.model.IToolProducer;
@@ -17,7 +16,7 @@ import edu.colorado.phet.glaciers.view.tools.AbstractToolIconNode.InteractiveToo
 public class GlacialBudgetMeterIconNode extends InteractiveToolIconNode {
     
     public GlacialBudgetMeterIconNode( IToolProducer toolProducer, ModelViewTransform mvt  ) {
-        super( GlaciersImages.GLACIAL_BUDGET_METER, GlaciersStrings.TOOLBOX_GLACIAL_BUDGET_METER, toolProducer, mvt );
+        super( GlacialBudgetMeterNode.createImage(), GlaciersStrings.TOOLBOX_GLACIAL_BUDGET_METER, toolProducer, mvt );
     }
     
     public AbstractTool createTool( Point2D position ) {
