@@ -4,7 +4,6 @@ package edu.colorado.phet.glaciers.view.tools;
 
 import java.awt.geom.Point2D;
 
-import edu.colorado.phet.glaciers.GlaciersImages;
 import edu.colorado.phet.glaciers.GlaciersStrings;
 import edu.colorado.phet.glaciers.model.AbstractTool;
 import edu.colorado.phet.glaciers.model.IToolProducer;
@@ -17,7 +16,7 @@ import edu.colorado.phet.glaciers.view.tools.AbstractToolIconNode.InteractiveToo
 public class TracerFlagIconNode extends InteractiveToolIconNode {
     
     public TracerFlagIconNode( IToolProducer toolProducer, ModelViewTransform mvt  ) {
-        super( GlaciersImages.TRACER_FLAG, GlaciersStrings.TOOLBOX_TRACER_FLAG, toolProducer, mvt );
+        super( TracerFlagNode.createImage(), GlaciersStrings.TOOLBOX_TRACER_FLAG, toolProducer, mvt );
     }
     
     public AbstractTool createTool( Point2D position ) {
